--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ mkl-fft==1.3.1
 mkl-service==2.4.0
 munkres==1.1.4
 numba==0.57.0
-numpy==1.24.0
+numpy>=1.23.0
 patsy==0.5.3
 Pillow==9.4.0
 pip>=23.0.1
