--- a/requirements.txt
+++ b/requirements.txt
@@ -15,8 +15,8 @@ matplotlib==3.7.1
 markdown-it-py==2.2.0
 mdurl==0.1.2
 memory-profiler==0.61.0
-mkl-fft==1.3.1
-mkl-service==2.4.0
+#mkl-fft==1.3.1
+#mkl-service==2.4.0
 munkres==1.1.4
 numba==0.57.0
 numpy>=1.23.0
