--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ joblib==1.2.0
 llvmlite==0.40.0
 matplotlib==3.7.1
 markdown-it-py==2.2.0
-numpy>=1.23.0
+numpy==1.23.0
 patsy==0.5.3
 Pillow==9.4.0
 pip>=23.0.1
